added ability to find, identify, and display image files

--- a/build.xml
+++ b/build.xml
@@ -4,5 +4,11 @@
         <mkdir dir="."/>
         <javac srcdir="." destdir="." includeantruntime="false"/>
     </target>
+    
+    <target name= "run">
+      <mkdir dir="."/>
+	<javac srcdir="." destdir="test" includeantruntime="false"/>
+	<java classname = "WebServer" classpath = "test" fork="true"/>
+	  </target>  
 
 </project>
